new site tool!! (Background Creator)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "eslintConfig": {
     "extends": "preact",
     "ignorePatterns": [
-      "build/"
+      "build/",
+      "docs/"
     ]
   },
   "devDependencies": {
