--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact watch",
+    "old_dev": "preact watch",
+    "old_build": "preact build",
     "lint": "eslint src",
     "test": "jest"
   },
